# datadistillr-python-sdk

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pylint.yml  python-package.yml
datadistillr/: AuthorizationException.py  __init__.py  auth_exceptions.py  datadistillr.py  datadistillr_account.py  project.py  pythonSDK.py
datadistillr/tests/: test_datadistillr_account.py  test_datadistillr_api.py  test_project.py
datadistillrSDK/: datadistillr.py  project.py  pythonSDK.py
datadistillrSDK/tests/: test_datadistillr_api.py
