[metadata]
name = datadistillr
version = 0.1.0
author = Charles Givre
author_email = charles@datadistillr.com
description = A Python SDK for interacting with datasets created on DataDistillr.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/datadistillr/datadistillr-python-sdk
project_urls =
    Bug Tracker = https://github.com/datadistillr/datadistillr-python-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: SQL
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Topic :: Database
[options]
package_dir =
    = datadistillr
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src